@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.349 2005/10/10 19:27:43 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.350 2005/10/10 20:16:52 rocket Exp $
+
+  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
+  targets/support/post-kmerge.sh:
+  Bypass module load on mips
 
   10 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
   remove --no-deps so dependancies get installed for genkernel
